# Small-Game-Engine

./: .gitignore  CMakeLists.txt  Color.h  EngineProfile-Runtime.json  EngineProfile-Shutdown.json  Game.cpp  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  README.md  Random.cpp  Random.h  main.cpp
.cache/clangd/index/: Color.h.130D0E4ECB311075.idx  Color.h.3D4C530F84E5C1F8.idx  GameLayer.cpp.06D8A7B5C93B8878.idx  GameLayer.cpp.7CF90D951D225094.idx  GameLayer.h.A084BF046C7B4B70.idx  GameLayer.h.D66A95306C9D5897.idx  Level.cpp.05BF98B63899DAAA.idx  Level.cpp.BB105D75D36A466A.idx  Level.h.3968DF0F6E9D5EEC.idx  Level.h.A84488191793E4B6.idx  ParticleSystem.cpp.CBB9E78F166C37F1.idx  ParticleSystem.cpp.CE32ECC7E928F564.idx  ParticleSystem.h.24E73A076DC2777B.idx  ParticleSystem.h.780EB58EE6FA2764.idx  Player.cpp.64C0526BA8F24337.idx  Player.cpp.E015C6DF4826D8BD.idx  Player.h.73038DDCF73D6523.idx  Player.h.CBA49FFB6DEF4A03.idx  Random.cpp.74FAC34828C56EC8.idx  Random.cpp.C58E44F50396D943.idx  Random.h.3200C1F0ED88B7B0.idx  Random.h.A770C6492E3D17E6.idx  main.cpp.78E6DF51987B6576.idx  main.cpp.992461751D7FF1E7.idx
Debug/: CMakeCache.txt  Makefile  Rocket-Game  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-4811975784bf9ef212f7.json  index-2024-03-17T07-12-43-0977.json  target-Rocket-Game-Debug-c5dc6a086af60ad7c28f.json
cmake/: modules.cmake
